VTK-1509 fix too wide calendar in <= IE 7

--- a/src/main/resources/web/themes/default/view-event-calendar-listing.css
+++ b/src/main/resources/web/themes/default/view-event-calendar-listing.css
@@ -17,11 +17,11 @@ div.vrtx-resource {
 }
 
 #vrtx-event-calendar .ui-datepicker {
-  width: 100%;
   padding: 0px;
   background-color: #ccc;
   border: 1px solid #ccc;
   margin-top: 5px;
+  width: 200px;
 }
 
 #vrtx-event-calendar .ui-datepicker .ui-datepicker-header {
